local to server

--- a/.env.example
+++ b/.env.example
@@ -5,15 +5,45 @@
 NODE_ENV=development
 PORT=3000
 
-# Azure SQL Database Configuration
-# Replace these with your actual Azure SQL Database connection details
-DB_SERVER=your-azure-sql-server.database.windows.net
-DB_NAME=your-database-name
+# MySQL Database Configuration
+# Replace these with your actual MySQL database connection details
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=textrepeater_db
 DB_USER=your-username
 DB_PASSWORD=your-password
+DB_SSL=false
 
-# Example values (DO NOT USE IN PRODUCTION):
-# DB_SERVER=myapp-sql-server.database.windows.net
-# DB_NAME=textrepeater-db
-# DB_USER=sqladmin
+# Cloud MySQL Examples:
+
+# Azure Database for MySQL:
+# DB_HOST=your-mysql-server.mysql.database.azure.com
+# DB_PORT=3306
+# DB_NAME=textrepeater_db
+# DB_USER=admin@your-mysql-server
 # DB_PASSWORD=YourSecurePassword123!
+# DB_SSL=true
+
+# AWS RDS MySQL:
+# DB_HOST=your-rds-instance.region.rds.amazonaws.com
+# DB_PORT=3306
+# DB_NAME=textrepeater_db
+# DB_USER=admin
+# DB_PASSWORD=YourSecurePassword123!
+# DB_SSL=true
+
+# Google Cloud SQL MySQL:
+# DB_HOST=your-project:region:instance-name
+# DB_PORT=3306
+# DB_NAME=textrepeater_db
+# DB_USER=root
+# DB_PASSWORD=YourSecurePassword123!
+# DB_SSL=true
+
+# Local MySQL (XAMPP/WAMP/MAMP):
+# DB_HOST=localhost
+# DB_PORT=3306
+# DB_NAME=textrepeater_db
+# DB_USER=root
+# DB_PASSWORD=
+# DB_SSL=false
