Fix Azure deployment issues - Updated Node.js version, fixed build scripts, improved GitHub Actions workflow

--- a/web.config
+++ b/web.config
@@ -4,14 +4,20 @@
     <handlers>
       <add name="iisnode" path="server.js" verb="*" modules="iisnode"/>
     </handlers>
+    
     <rewrite>
       <rules>
+        <!-- First rule will do the rewrite based on the incoming URL path -->
         <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">
           <match url="^server.js\/debug[\/]?" />
         </rule>
+        
+        <!-- Check for static files -->
         <rule name="StaticContent">
           <action type="Rewrite" url="public{REQUEST_URI}"/>
         </rule>
+        
+        <!-- For all other requests, redirect to server.js -->
         <rule name="DynamicContent">
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True"/>
@@ -20,6 +26,8 @@
         </rule>
       </rules>
     </rewrite>
+    
+    <!-- Don't interfere with requests for node-inspector debugging -->
     <security>
       <requestFiltering>
         <hiddenSegments>
@@ -27,7 +35,10 @@
         </hiddenSegments>
       </requestFiltering>
     </security>
+    
     <httpErrors existingResponse="PassThrough" />
+    
+    <!-- You can control how Node is hosted within IIS using the following options -->
     <iisnode 
       node_env="%node_env%" 
       nodeProcessCountPerApplication="1"
@@ -54,7 +65,6 @@
       flushResponse="false"
       enableXFF="false"
       promoteServerVars=""
-      configOverrides="iisnode.yml"
     />
   </system.webServer>
 </configuration>
