--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "echo 'No build step required for this application'",
+    "test": "echo 'No tests specified' && exit 0",
     "postinstall": "echo 'Dependencies installed successfully'"
   },
   "keywords": ["textrepeater", "azure", "web-app"],
@@ -24,6 +25,7 @@
     "nodemon": "^3.0.2"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
