--- a/web.config
+++ b/web.config
@@ -11,14 +11,19 @@
         <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">
           <match url="^server.js\/debug[\/]?" />
         </rule>
-        
-        <!-- Check for static files -->
-        <rule name="StaticContent">
-          <action type="Rewrite" url="public{REQUEST_URI}"/>
+
+        <!-- Allow IIS to serve existing static files directly -->
+        <rule name="StaticContent" stopProcessing="true">
+          <match url=".*" />
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" />
+          </conditions>
+          <action type="None" />
         </rule>
-        
+
         <!-- For all other requests, redirect to server.js -->
-        <rule name="DynamicContent">
+        <rule name="DynamicContent" stopProcessing="true">
+          <match url=".*" />
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True"/>
           </conditions>
@@ -40,7 +45,7 @@
     
     <!-- You can control how Node is hosted within IIS using the following options -->
     <iisnode 
-      node_env="%node_env%" 
+      node_env="%NODE_ENV%" 
       nodeProcessCountPerApplication="1"
       maxConcurrentRequestsPerProcess="1024"
       maxNamedPipeConnectionRetry="3"
